<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uth.cgyv.grupo.cuatro.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="uth.cgyv.grupo.cuatro.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="uth.cgyv.grupo.cuatro.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_filtros"
        android:name="uth.cgyv.grupo.cuatro.myapplication.ui.filter.FiltrosCamaraXFragment"
        android:label="@string/menu_filtros"
        tools:layout="@layout/fragment_filtros_camara_x" />

    <fragment
        android:id="@+id/nav_face_emotions"
        android:name="uth.cgyv.grupo.cuatro.myapplication.ui.filter.FiltrosCamaraXFragment"
        android:label="@string/menu_face_emotions"
        tools:layout="@layout/fragment_face_emotions" />

    <fragment
        android:id="@+id/nav_face_landmarks"
        android:name="uth.cgyv.grupo.cuatro.myapplication.ui.filter.FiltrosCamaraXFragment"
        android:label="@string/menu_face_landmarks"
        tools:layout="@layout/fragment_face_landmarks" />

</navigation>